--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -28,7 +28,9 @@
     "@ignite-ui/react": "*",
     "@ignite-ui/tokens": "*",
     "@ignite-ui/eslint-config": "*",
+    "@ignite-ui/ts-config": "*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "polished": "^4.2.2"
   }
 }
